GP: Add/Delete Vertex Group crashes #56802

Closed
opened 2018-09-14 15:35:38 +02:00 by Kurtis Stryker · 3 comments

System Information
win10
ryzen 3 2200g APU

Blender Version
2.8 alpha 2 from 2018-09-13 16

Adding then deleting vertex group in grease pencil crashes program

--
Add grease pencil object-draw stroke> in grease pencil tab, click + to add vertex group> click - to delete vertex group>crash.

You don't need to draw a stroke for it to happen if there is already a stroke on canvas.
For ex: add gp stroke or monkey>add vertex group>delete group>crash.

**System Information** win10 ryzen 3 2200g APU **Blender Version** 2.8 alpha 2 from 2018-09-13 16 Adding then deleting vertex group in grease pencil crashes program -- Add grease pencil object-draw stroke> in grease pencil tab, click + to add vertex group> click - to delete vertex group>crash. You don't need to draw a stroke for it to happen if there is already a stroke on canvas. For ex: add gp stroke or monkey>add vertex group>delete group>crash.
Author

Added subscriber: @KurtisStryker

Added subscriber: @KurtisStryker
Antonio Vazquez self-assigned this 2018-09-14 15:39:49 +02:00

This issue was referenced by cfaf92c079

This issue was referenced by cfaf92c0790f04e526339a1049a321f927f10118

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Antonio Vazquez changed title from Add/Delete Vertex Group crashes to GP: Add/Delete Vertex Group crashes 2018-09-14 16:10:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56802
No description provided.