GP: Fix T56802 - Add/Delete Vertex Group crashes